* load.c (loaded_feature_path): stop returning false negatives for   filenames which are trailing substrings of file extensions.  For   example, 'b', which a trailing substring of ".rb" should not return   false. [Bug #11155][ruby-core:69206]

* test/ruby/test_autoload.rb: test for fix

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@50515 b2dd03c8-39d4-4d8f-98ff-823fe69b080e